--- a/iOS/assets/sass/main.scss
+++ b/iOS/assets/sass/main.scss
@@ -1074,7 +1074,7 @@ $size-header-pad: 4em;
 		@include vendor('justify-content', 'space-between');
 		background-color:		_palette(accent2, bg);
 		background-attachment:	scroll,								scroll;
-		background-image:		url('images/overlay.jpg'),			url('../../images/bg.jpg');
+		background-image:		url('images/overlay.jpg'),			url('../../images/bg.png');
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								150%;
@@ -1468,7 +1468,7 @@ $size-header-pad: 4em;
 			#footer {
 				background-attachment:	scroll;
 				background-color:		_palette(accent2, bg);
-				background-image:		url('images/overlay.jpg'),		url('../../images/bg.jpg');
+				background-image:		url('images/overlay.jpg'),		url('../../images/bg.png');
 				background-position:	top left,						bottom center;
 				background-repeat:		repeat,							no-repeat;
 				background-size:		auto,							cover;
